@@ -11,21 +11,18 @@ import com.hcmus.mentor.backend.controller.payload.response.messages.MessageDeta
 import com.hcmus.mentor.backend.controller.payload.response.messages.MessageResponse;
 import com.hcmus.mentor.backend.controller.payload.response.messages.ReactMessageResponse;
 import com.hcmus.mentor.backend.controller.payload.response.messages.RemoveReactionResponse;
-import com.hcmus.mentor.backend.controller.payload.response.tasks.TaskAssigneeResponse;
 import com.hcmus.mentor.backend.controller.payload.response.tasks.TaskMessageResponse;
-import com.hcmus.mentor.backend.controller.payload.response.users.ProfileResponse;
-import com.hcmus.mentor.backend.controller.payload.response.users.ShortProfile;
 import com.hcmus.mentor.backend.controller.usecase.channel.updatelastmessage.UpdateLastMessageCommand;
+import com.hcmus.mentor.backend.controller.usecase.vote.common.VoteResult;
 import com.hcmus.mentor.backend.domain.*;
 import com.hcmus.mentor.backend.domain.constant.EmojiType;
-import com.hcmus.mentor.backend.domain.constant.TaskStatus;
-import com.hcmus.mentor.backend.domain.dto.AssigneeDto;
 import com.hcmus.mentor.backend.domain.dto.EmojiDto;
 import com.hcmus.mentor.backend.domain.dto.ReactionDto;
 import com.hcmus.mentor.backend.repository.*;
 import com.hcmus.mentor.backend.service.MessageService;
 import com.hcmus.mentor.backend.service.NotificationService;
 import com.hcmus.mentor.backend.service.SocketIOService;
+import com.hcmus.mentor.backend.service.dto.MeetingDto;
 import com.hcmus.mentor.backend.service.fileupload.BlobStorage;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
@@ -34,6 +31,9 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.tika.Tika;
 import org.jsoup.Jsoup;
+import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -41,10 +41,13 @@ import org.springframework.web.multipart.MultipartFile;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static com.hcmus.mentor.backend.domain.Message.Type.*;
+
 /**
  * {@inheritDoc}
  */
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class MessageServiceImpl implements MessageService {
 
@@ -52,21 +55,21 @@ public class MessageServiceImpl implements MessageService {
     private final ChannelRepository channelRepository;
     private final GroupRepository groupRepository;
     private final MessageRepository messageRepository;
-    private final MeetingRepository meetingRepository;
     private final TaskRepository taskRepository;
-    private final VoteRepository voteRepository;
     private final UserRepository userRepository;
     private final SocketIOService socketIOService;
     private final NotificationService notificationService;
     private final BlobStorage blobStorage;
-    private final NotificationRepository notificationRepository;
     private final Pipeline pipeline;
+
+    private final ModelMapper modelMapper;
 
     /**
      * {@inheritDoc}
      */
-    @SneakyThrows
     @Override
+    @SneakyThrows
+    @Transactional(readOnly = true)
     public Message find(String id) {
         var message = messageRepository.findById(id);
 
@@ -77,38 +80,38 @@ public class MessageServiceImpl implements MessageService {
      * {@inheritDoc}
      */
     @Override
-    public List<MessageDetailResponse> getGroupMessages(
-            String viewerId,
-            String groupId,
-            int page,
-            int size) {
-        List<MessageResponse> responses = messageRepository.getGroupMessagesByGroupId(groupId, page * size, size);
+    @Transactional(readOnly = true)
+    public List<MessageDetailResponse> getGroupMessages(String viewerId, String groupId, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        var messages = messageRepository.getGroupMessagesByChannelId(pageable, groupId).getContent();
+        return mappingToMessageDetailResponse(messages, viewerId);
+    }
 
-        return fulfillMessages(responses, viewerId);
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    @Transactional(readOnly = true)
+    public List<MessageResponse> findGroupMessagesByText(String groupId, String query, int page, int size) {
+        return messageRepository.findGroupMessages(groupId, query).stream()
+                .map(message -> mappingToMessageResponse(message, Optional.ofNullable(message.getSender()).map(User::getId).orElse(null)))
+                .toList();
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public List<MessageResponse> findGroupMessagesByText(
-            String groupId, String query, int page, int size) {
-        List<MessageResponse> responses =
-                messageRepository.findGroupMessages(groupId, query, page * size, size);
-        return responses;
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
+    @Transactional(readOnly = true)
     public String getLastGroupMessage(String groupId) {
-        Message lastMessage = messageRepository.findTopByGroupIdOrderByCreatedDateDesc(groupId).orElse(null);
 
+        Message lastMessage = messageRepository.findTopByChannelIdOrderByCreatedDateDesc(groupId).orElse(null);
         return getMessageContent(lastMessage);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public String getMessageContentById(String messageId) {
         var message = messageRepository.findById(messageId).orElse(null);
 
@@ -122,7 +125,9 @@ public class MessageServiceImpl implements MessageService {
         if (Message.Status.DELETED.equals(message.getStatus())) {
             return "Tin nhắn đã được thu hồi.";
         }
-        User sender = userRepository.findById(message.getSenderId()).orElse(null);
+
+        var sender = message.getSender();
+
         switch (message.getType()) {
             case TEXT:
                 if (sender == null) {
@@ -157,27 +162,30 @@ public class MessageServiceImpl implements MessageService {
      * {@inheritDoc}
      */
     @Override
+    @Transactional
     public void reactMessage(ReactMessageRequest request) {
-        Optional<Message> messageWrapper = messageRepository.findById(request.getMessageId());
-        if (!messageWrapper.isPresent()) {
+        var message = messageRepository.findById(request.getMessageId()).orElse(null);
+        if (message == null) {
+            return;
+        }
+        User reactor = userRepository.findById(request.getSenderId()).orElse(null);
+        if (reactor == null) {
             return;
         }
 
-        Message message = messageWrapper.get();
-        if (!isMemberGroup(message.getSenderId(), message.getGroupId())) {
+        Channel channel = message.getChannel();
+        if (channel != null && !channel.isMember(request.getSenderId())) {
             return;
         }
 
         EmojiType emoji = EmojiType.valueOf(request.getEmojiId());
-        ReactionDto newReaction = message.react(request.getSenderId(), emoji);
+        message.react(reactor, emoji);
+
         messageRepository.save(message);
 
-        pingGroup(message.getGroupId());
-
-        User reactor = userRepository.findById(request.getSenderId()).orElse(null);
         ReactMessageResponse response = ReactMessageResponse.from(request, reactor);
-        socketIOService.sendReact(response, message.getGroupId());
-        notificationService.sendNewReactNotification(message, response, request.getSenderId());
+        socketIOService.sendReact(response, channel.getId());
+//        notificationService.sendNewReactNotification(message, response, request.getSenderId());
     }
 
     /**
@@ -185,24 +193,26 @@ public class MessageServiceImpl implements MessageService {
      */
     @Override
     public void removeReaction(String messageId, String senderId) {
-        Optional<Message> messageWrapper = messageRepository.findById(messageId);
-        if (!messageWrapper.isPresent()) {
+        var message = messageRepository.findById(messageId).orElse(null);
+        if (message == null) {
+            return;
+        }
+        User reactor = userRepository.findById(senderId).orElse(null);
+        if (reactor == null) {
             return;
         }
 
-        Message message = messageWrapper.get();
-        if (!isMemberGroup(senderId, message.getGroupId())) {
+        Channel channel = message.getChannel();
+
+        if (channel != null && !channel.isMember(senderId)) {
             return;
         }
 
-        message.removeReact(senderId);
+        message.removeReact(reactor);
         Message updatedMessage = messageRepository.save(message);
 
-        MessageDetailResponse.TotalReaction newTotalReaction =
-                calculateTotalReactionMessage(updatedMessage);
-        socketIOService.sendRemoveReact(
-                new RemoveReactionResponse(messageId, senderId, newTotalReaction),
-                updatedMessage.getGroupId());
+        MessageDetailResponse.TotalReaction newTotalReaction = calculateTotalReactionMessage(updatedMessage);
+        socketIOService.sendRemoveReact(new RemoveReactionResponse(messageId, senderId, newTotalReaction), channel.getId());
     }
 
     /**
@@ -210,8 +220,10 @@ public class MessageServiceImpl implements MessageService {
      */
     @Override
     public MessageDetailResponse.TotalReaction calculateTotalReactionMessage(Message message) {
-        List<EmojiDto> data = MessageDetailResponse.generateTotalReactionData(message.getReactions());
-        int total = MessageDetailResponse.calculateTotalReactionAmount(message.getReactions());
+        var reactionDtos = mappingReaction(message.getReactions());
+        List<EmojiDto> data = MessageDetailResponse.generateTotalReactionData(reactionDtos);
+        int total = MessageDetailResponse.calculateTotalReactionAmount(reactionDtos);
+
         return MessageDetailResponse.TotalReaction.builder()
                 .data(data)
                 .ownerReacted(Collections.emptyList())
@@ -224,8 +236,6 @@ public class MessageServiceImpl implements MessageService {
      */
     @Override
     public Message saveMessage(Message data) {
-        pingGroup(data.getGroupId());
-        pipeline.send(UpdateLastMessageCommand.builder().messageId(data.getId()).channelId(data.getGroupId()).build());
         return messageRepository.save(data);
     }
 
@@ -235,13 +245,13 @@ public class MessageServiceImpl implements MessageService {
     @Override
     public Message saveTaskMessage(Task task) {
         var message = messageRepository.save(Message.builder()
-                .senderId(task.getAssignerId())
-                .groupId(task.getGroupId())
+                .sender(task.getAssigner())
+                .channel(task.getGroup())
                 .createdDate(task.getCreatedDate())
                 .type(Message.Type.TASK)
-                .taskId(task.getId())
+                .task(task)
                 .build());
-        pipeline.send(UpdateLastMessageCommand.builder().messageId(message.getId()).channelId(task.getGroupId()).build());
+        pipeline.send(UpdateLastMessageCommand.builder().message(message).channel(task.getGroup()).build());
         return message;
     }
 
@@ -250,14 +260,17 @@ public class MessageServiceImpl implements MessageService {
      */
     @Override
     public Message saveVoteMessage(Vote vote) {
-        var message = messageRepository.save(Message.builder()
-                .senderId(vote.getCreatorId())
-                .groupId(vote.getGroupId())
+        var message = Message.builder()
+                .sender(vote.getCreator())
+                .channel(vote.getGroup())
                 .createdDate(new Date())
                 .type(Message.Type.VOTE)
-                .voteId(vote.getId())
-                .build());
-        pipeline.send(UpdateLastMessageCommand.builder().messageId(message.getId()).channelId(message.getGroupId()).build());
+                .vote(vote)
+                .build();
+
+        message = messageRepository.save(message);
+
+        pipeline.send(UpdateLastMessageCommand.builder().message(message).channel(message.getChannel()).build());
         return message;
     }
 
@@ -267,6 +280,8 @@ public class MessageServiceImpl implements MessageService {
     @SneakyThrows
     @Override
     public Message saveImageMessage(SendImagesRequest request) {
+        var user = userRepository.findById(request.getSenderId()).orElseThrow(() -> new DomainException("User not found"));
+        var channel = channelRepository.findById(request.getGroupId()).orElseThrow(() -> new DomainException("Channel not found"));
         List<String> imageKeys = new ArrayList<>();
         var tika = new Tika();
 
@@ -278,15 +293,15 @@ public class MessageServiceImpl implements MessageService {
 
         Message message = messageRepository.save(Message.builder()
                 .id(request.getId())
-                .senderId(request.getSenderId())
-                .groupId(request.getGroupId())
+                .sender(user)
+                .channel(channel)
                 .createdDate(new Date())
-                .type(Message.Type.IMAGE)
+                .type(IMAGE)
                 .images(imageKeys)
                 .build());
 
         pingGroup(request.getGroupId());
-        pipeline.send(UpdateLastMessageCommand.builder().messageId(message.getId()).channelId(message.getGroupId()).build());
+        pipeline.send(UpdateLastMessageCommand.builder().message(message).channel(message.getChannel()).build());
         return message;
     }
 
@@ -309,176 +324,15 @@ public class MessageServiceImpl implements MessageService {
                 .build();
         Message message = messageRepository.save(Message.builder()
                 .id(request.getId())
-                .senderId(request.getSenderId())
-                .groupId(request.getGroupId())
+                .sender(userRepository.findById(request.getSenderId()).orElseThrow(() -> new DomainException("User not found")))
+                .channel(channelRepository.findById(request.getGroupId()).orElseThrow(() -> new DomainException("Channel not found")))
                 .createdDate(new Date())
-                .type(Message.Type.FILE)
-                .file(fileModel)
+                .type(FILE)
+                .file(new File(fileModel))
                 .build());
         pingGroup(request.getGroupId());
-        pipeline.send(UpdateLastMessageCommand.builder().messageId(message.getId()).channelId(message.getGroupId()).build());
+        pipeline.send(UpdateLastMessageCommand.builder().message(message).channel(message.getChannel()).build());
         return message;
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public List<MessageDetailResponse> fulfillMessages(
-            List<MessageResponse> messages,
-            String viewerId) {
-        List<String> userIds = messages.stream()
-                .flatMap(response -> response.getReactions().stream())
-                .map(ReactionDto::getUserId)
-                .toList();
-        Map<String, User> reactors = userRepository.findByIdIn(userIds).stream()
-                .collect(Collectors.toMap(User::getId, user -> user, (u1, u2) -> u2));
-        return messages.stream()
-                .map(this::fulfillMessage)
-                .filter(Objects::nonNull)
-                .filter(message -> !message.isDeletedAttach())
-                .map(this::processSpecialMessage)
-                .map(message -> fulfillReactions(message, reactors))
-                .map(message -> MessageDetailResponse.totalReaction(message, viewerId))
-                .toList();
-    }
-
-    private MessageDetailResponse processSpecialMessage(MessageDetailResponse message) {
-        if (Message.Status.DELETED.equals(message.getStatus())) {
-            message.setContent("Tin nhắn đã được xoá");
-        }
-
-        if (message.getReply() != null) {
-            var messageReply = messageRepository.findById(message.getReply().getId()).orElse(null);
-            if (messageReply == null) {
-                return message;
-            }
-            var sender = userRepository.findShortProfile(messageReply.getSenderId());
-            message.setReply(MessageDetailResponse.ReplyMessage.builder()
-                    .id(messageReply.getId())
-                    .senderName(sender != null ? sender.getName() : "Người dùng không tồn tại")
-                    .content(messageReply.isDeleted() ? "Tin nhắn đã được xoá" : messageReply.getContent())
-                    .build());
-        }
-
-        return message;
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public MessageDetailResponse fulfillTextMessage(MessageResponse message) {
-        MessageDetailResponse response = MessageDetailResponse.from(message);
-        if (message.getReply() != null) {
-            Optional<Message> wrapper = messageRepository.findById(message.getReply());
-            if (wrapper.isEmpty()) {
-                return response;
-            }
-            Message data = wrapper.get();
-            String content = data.getContent();
-            if (data.isDeleted()) {
-                content = "Tin nhắn đã được xoá";
-            }
-            ShortProfile sender = userRepository.findShortProfile(data.getSenderId());
-            String senderName = "Người dùng không tồn tại";
-            if (sender != null) {
-                senderName = sender.getName();
-            }
-            MessageDetailResponse.ReplyMessage replyMessage = MessageDetailResponse.ReplyMessage.builder()
-                    .id(data.getId())
-                    .senderName(senderName)
-                    .content(content)
-                    .build();
-            response.setReply(replyMessage);
-        }
-
-        return response;
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public MessageDetailResponse fulfillMeetingMessage(MessageResponse message) {
-        Optional<Meeting> meeting = meetingRepository.findById(message.getMeetingId());
-        return MessageDetailResponse.from(message, meeting.orElse(null));
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public MessageDetailResponse fulfillTaskMessage(MessageResponse message) {
-        Optional<Task> taskWrapper = taskRepository.findById(message.getTaskId());
-        if (taskWrapper.isEmpty()) {
-            return null;
-        }
-        TaskMessageResponse taskDetail = TaskMessageResponse.from(taskWrapper.get());
-
-        List<TaskAssigneeResponse> assignees = getTaskAssignees(message.getTaskId());
-        taskDetail.setAssignees(assignees);
-        return MessageDetailResponse.from(message, taskDetail);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public ReactionDto fulfillReaction(ReactionDto reaction, User reactor) {
-        if (reactor == null) {
-            return new ReactionDto();
-        }
-        reaction.update(reactor);
-        return reaction;
-    }
-
-    private MessageDetailResponse fulfillReactions(
-            MessageDetailResponse message,
-            Map<String, User> reactors) {
-        List<ReactionDto> reactions = message.getReactions().stream()
-                .map(reaction -> {
-                    User reactor = reactors.getOrDefault(reaction.getUserId(), null);
-                    return fulfillReaction(reaction, reactor);
-                })
-                .filter(reaction -> reaction.getUserId() != null)
-                .toList();
-        message.setReactions(reactions);
-        return message;
-    }
-
-    private MessageDetailResponse fulfillMessage(MessageResponse message) {
-        return switch (message.getType()) {
-            case MEETING -> fulfillMeetingMessage(message);
-            case TASK -> fulfillTaskMessage(message);
-            case VOTE -> fulfillVotingMessage(message);
-            default -> MessageDetailResponse.from(message);
-        };
-    }
-
-    private MessageDetailResponse fulfillVotingMessage(MessageResponse message) {
-        Vote vote = voteRepository.findById(message.getVoteId()).orElse(null);
-        if (vote != null) {
-            vote.sortChoicesDesc();
-        }
-        return MessageDetailResponse.from(message, vote);
-    }
-
-    private Boolean isMemberGroup(String userId, String groupId) {
-        var groupOpt = groupRepository.findById(groupId);
-
-        if (groupOpt.isPresent()) {
-            var group = groupOpt.get();
-            return group.getMentors().contains(userId) || group.getMentees().contains(userId);
-        }
-
-        var channelOpt = channelRepository.findById(groupId);
-        if (channelOpt.isPresent()) {
-            var channel = channelOpt.get();
-            return channel.isMember(userId) || isMemberGroup(userId, channel.getParentId());
-        }
-
-        return false;
     }
 
     private void pingGroup(String groupId) {
@@ -497,7 +351,6 @@ public class MessageServiceImpl implements MessageService {
         }
     }
 
-
     /**
      * Only forward message type TEXT
      *
@@ -505,25 +358,23 @@ public class MessageServiceImpl implements MessageService {
      * @param request ForwardRequest
      */
     @Override
-    @Transactional(rollbackFor = Exception.class)
-    public List<Message> saveForwardMessage(String userId, ForwardRequest request) {
-        List<String> typeAllow = List.of(Message.Type.TEXT.name(), Message.Type.IMAGE.name(), Message.Type.FILE.name(), Message.Type.VIDEO.name());
-        var message = messageRepository.findById(request.getMessageId()).orElseThrow(() -> new DomainException("Message not found"));
-        if (!typeAllow.contains(message.getType().name())) {
+    @Transactional()
+    public void saveForwardMessage(String userId, ForwardRequest request) {
+
+        List<String> typeAllow = List.of(TEXT.name(), IMAGE.name(), FILE.name(), Message.Type.VIDEO.name());
+        User sender = userRepository.findById(userId).orElseThrow(() -> new DomainException("User not found"));
+        Message message = messageRepository.findById(request.getMessageId()).orElseThrow(() -> new DomainException("Message not found"));
+        if (!typeAllow.contains(message.getType().name()))
             throw new DomainException("Message type not allow forward");
-        }
-        User user = userRepository.findById(userId).orElseThrow(() -> new DomainException("User not found"));
 
-        var channelIds = new ArrayList<>(channelRepository.findByIdIn(request.getChannelIds()).stream().map(Channel::getId).toList());
-
-        groupRepository.findByIdIn(request.getChannelIds()).forEach(g -> channelIds.add(g.getId()));
+        var channels = channelRepository.findByIdIn(request.getChannelIds());
 
         try {
-            List<Message> messages = new ArrayList<>();
-            channelIds.forEach(cId -> {
+            var messages = new ArrayList<Message>();
+            channels.forEach(channel -> {
                 Message m = messageRepository.save(Message.builder()
-                        .senderId(userId)
-                        .groupId(cId)
+                        .sender(sender)
+                        .channel(channel)
                         .createdDate(new Date())
                         .content(message.getContent())
                         .type(message.getType())
@@ -532,15 +383,20 @@ public class MessageServiceImpl implements MessageService {
                         .file(message.getFile())
                         .isForward(true)
                         .build());
-                pipeline.send(UpdateLastMessageCommand.builder().messageId(message.getId()).channelId(message.getGroupId()).build());
+
+                pipeline.send(UpdateLastMessageCommand.builder()
+                        .message(message)
+                        .channel(message.getChannel())
+                        .build());
+
                 messages.add(m);
-                pingGroup(cId);
+                pingGroup(channel.getGroup().getId());
             });
             messages.forEach(m -> {
-                notificationService.sendForwardNotification(MessageDetailResponse.from(m, user), m.getGroupId());
-                socketIOService.sendBroadcastMessage(MessageDetailResponse.from(m, user), m.getGroupId());
+                var response = mappingToMessageDetailResponse(m, sender.getId());
+                notificationService.sendForwardNotification(response, m.getChannel().getGroup().getId());
+                socketIOService.sendBroadcastMessage(response, m.getChannel().getGroup().getId());
             });
-            return messages;
         } catch (Exception e) {
             logger.log(Level.INFO, "Forward message failed", e);
             throw new DomainException("Forward message failed");
@@ -548,44 +404,130 @@ public class MessageServiceImpl implements MessageService {
     }
 
     @Override
-    public boolean updateCreatedDateVoteMessage(String voteId) {
-        var messageOpt = messageRepository.findByVoteId(voteId);
-        if (messageOpt.isEmpty()) {
-            return false;
+    public void updateCreatedDateVoteMessage(String voteId) {
+        var message = messageRepository.findByVoteId(voteId).orElse(null);
+        if (message == null) {
+            return;
         }
-        var message = messageOpt.get();
 
         message.setCreatedDate(new Date());
         messageRepository.save(message);
 
-        return true;
     }
 
-    private List<TaskAssigneeResponse> getTaskAssignees(String taskId) {
-        var task = taskRepository.findById(taskId).orElse(null);
-        if (task == null) {
-            return Collections.emptyList();
+    @Override
+    public List<MessageDetailResponse> mappingToMessageDetailResponse(List<Message> messages, String viewerId) {
+        return messages.stream()
+                .map(message -> mappingToMessageDetailResponse(message, viewerId))
+                .toList();
+    }
+
+    @Override
+    public MessageDetailResponse mappingToMessageDetailResponse(Message message, String viewerId) {
+        var messageDetailResponse = modelMapper.map(message, MessageDetailResponse.class);
+        switch (message.getType()) {
+            case VOTE -> messageDetailResponse.setVote(modelMapper.map(message.getVote(), VoteResult.class));
+            case TASK -> messageDetailResponse.setTask(modelMapper.map(message.getTask(), TaskMessageResponse.class));
+            case MEETING -> messageDetailResponse.setMeeting(modelMapper.map(message.getMeeting(), MeetingDto.class));
+            case FILE -> messageDetailResponse.setFile(modelMapper.map(message.getFile(), FileModel.class));
+            case IMAGE ->
+                    messageDetailResponse.setImages(message.getImages().stream().map(url -> MessageDetailResponse.Image.builder().url(url).build()).toList());
         }
 
-        var group = groupRepository.findByChannelIdsContainingOrPrivateIdsContaining(task.getGroupId(), task.getGroupId()).orElse(null);
-        if (group == null) {
-            return Collections.emptyList();
+        if (!List.of(VOTE, TASK, MEETING).contains(message.getType())) {
+            var reactions = mappingReaction(message.getReactions());
+            messageDetailResponse.setReactions(reactions);
+
+            var reactionDtos = mappingEmojiFromDto(reactions);
+            var ownerReaction = reactions.stream().filter(re -> Objects.equals(re.getUserId(), viewerId)).findFirst().orElse(null);
+            messageDetailResponse.setTotalReaction(MessageDetailResponse.TotalReaction.builder()
+                    .data(reactionDtos)
+                    .ownerReacted(ownerReaction != null ? mappingEmojiFromDto(Collections.singletonList(ownerReaction)) : Collections.emptyList())
+                    .total(sumEmojis(reactionDtos))
+                    .build());
         }
+        return messageDetailResponse;
 
-        List<String> assigneeIds = task.getAssigneeIds().stream()
-                .map(AssigneeDto::getUserId).toList();
+    }
 
-        List<ProfileResponse> assignees = userRepository.findAllByIdIn(assigneeIds);
+    @Override
+    public MessageResponse mappingToMessageResponse(Message message, String viewerId) {
+        var messageResponse = modelMapper.map(message, MessageResponse.class);
 
-        Map<String, TaskStatus> statuses = task.getAssigneeIds().stream()
-                .collect(Collectors.toMap(AssigneeDto::getUserId, AssigneeDto::getStatus, (s1, s2) -> s2));
+        switch (message.getType()) {
+            case FILE -> messageResponse.setFile(modelMapper.map(message.getFile(), FileModel.class));
+            case IMAGE -> messageResponse.setImages(message.getImages());
+            case TASK ->
+                    messageResponse.setTaskId(Optional.ofNullable(message.getTask()).map(Task::getId).orElse(null));
+            case MEETING ->
+                    messageResponse.setMeetingId(Optional.ofNullable(message.getMeeting()).map(Meeting::getId).orElse(null));
+            case VOTE ->
+                    messageResponse.setVoteId(Optional.ofNullable(message.getVote()).map(Vote::getId).orElse(null));
+        }
+        messageResponse.setReactions(mappingReaction(message.getReactions()));
 
-        return assignees.stream()
-                .map(assignee -> {
-                    TaskStatus status = statuses.getOrDefault(assignee.getId(), null);
-                    boolean isMentor = group.isMentor(assignee.getId());
-                    return TaskAssigneeResponse.from(assignee, status, isMentor);
+        return messageResponse;
+    }
+
+    private List<ReactionDto> mappingReaction(List<Reaction> reactions) {
+        return reactions.stream()
+                .collect(Collectors.groupingBy(reaction -> reaction.getUser().getId()))
+                .values()
+                .stream()
+                .map(reactionList -> {
+                    User user = reactionList.getFirst().getUser();
+                    ReactionDto reactionDto = ReactionDto.builder()
+                            .userId(user.getId())
+                            .name(user.getName())
+                            .imageUrl(user.getImageUrl())
+                            .build();
+
+                    var emojiDtos = mappingEmoji(reactionList);
+                    reactionDto.setData(emojiDtos);
+                    reactionDto.setTotal(sumEmojis(emojiDtos));
+
+                    return reactionDto;
                 })
                 .toList();
+    }
+
+    private List<EmojiDto> mappingEmoji(List<Reaction> reactions) {
+
+        if (reactions == null || reactions.isEmpty())
+            return Collections.emptyList();
+
+        return reactions.stream()
+                .collect(Collectors.groupingBy(Reaction::getEmojiType))
+                .values()
+                .stream()
+                .map(reactions1 -> EmojiDto.builder()
+                        .id(reactions1.stream().findFirst().get().getEmojiType())
+                        .total(reactions1.stream().map(Reaction::getTotal).reduce(0, Integer::sum)).build())
+                .toList();
+    }
+
+    private List<EmojiDto> mappingEmojiFromDto(List<ReactionDto> reactionDtos) {
+
+        if (reactionDtos == null || reactionDtos.isEmpty())
+            return Collections.emptyList();
+
+        var reactions = reactionDtos.stream().flatMap(r -> r.getData().stream()).toList();
+
+        return Arrays.stream(EmojiType.values()).map(
+                emojiType -> EmojiDto.builder()
+                        .id(emojiType)
+                        .total(sumEmojis(reactions.stream().filter(m -> m.getId() == emojiType).toList()))
+                        .build()
+        ).toList();
+    }
+
+    private List<EmojiDto> generateEmojiDtos() {
+        return Arrays.stream(EmojiType.values()).map(
+                emojiType -> EmojiDto.builder().id(emojiType).total(0).build()
+        ).toList();
+    }
+
+    private Integer sumEmojis(List<EmojiDto> emojis) {
+        return emojis.stream().map(EmojiDto::getTotal).reduce(0, Integer::sum);
     }
 }
